# desktop-entry-daemon

./: 404.html  Cargo.toml  README.md  index.html  justfile  net.ryanabx.DesktopEntry.xml  print.html  searchindex.js  searchindex.json  usage.html
.github/workflows/: pages.yml  rust.yml
.rpm/: desktop-entry-daemon.spec  setup.sh  xdg-temp-daemon.spec
data/: desktop-entry-daemon.service.in  net.ryanabx.DesktopEntry.xml  net.ryanabx.XDGTempDaemon.xml  xdg-temp-daemon-clean.service.in  xdg-temp-daemon.profile.d.in  xdg-temp-daemon.service.in
data/interface/: net.ryanabx.DesktopEntryDaemon.xml
data/profiles.d/: desktop-entry-daemon.sh
docs/: DESIGN.md  USAGE.md  _config.yml  book.toml  index.md  net.ryanabx.DesktopEntry.xml  org.desktopintegration.DesktopEntry.xml
docs/src/: SUMMARY.md  introduction.md
env.d/: 61-xdg-temp-daemon
introspection/: net.ryanabx.DesktopEntry.xml
profile/: desktop-entry-daemon.sh  xdg-temp-daemon.sh
profile.d/: desktop-entry-daemon.sh
res/: io.ryanabx.DesktopEntry.xml
src/: daemon.rs  desktop_entry.rs  entry_management.rs  files.rs  main.rs  tools.rs  types.rs  utils.rs
src/freedesktop/: desktop_entry.rs  mod.rs
src/utils/: files.rs  mod.rs
systemd/: desktop-entry-daemon-clean.service  desktop-entry-daemon.service  xdg-temp-daemon-clean.service  xdg-temp-daemon.service
