[package]
name = "desktop-entry-daemon"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.async-std]
version = "1.12.0"
features = ["attributes"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
image = "0.25.1"
log = "0.4.21"
svg = "0.16.0"
tempfile = "3.10.1"
xdg = "2.5.2"
zbus = "4.1.2"
