[package]
name = "desktop-entry-daemon"
authors = ["Ryan Brue <ryanbrue@gmail.com>"]
version = "0.1.0"
license = "MIT"
repository = "https://github.com/ryanabx/desktop-entry-daemon"
documentation = "https://ryanabx.github.io/desktop-entry-daemon/"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.async-std]
version = "1.12.0"
features = ["attributes"]

[dependencies]
env_logger = "0.11.3"
freedesktop-desktop-entry = "0.5.2"
image = "0.25.1"
log = "0.4.21"
ron = "0.8.1"
serde = { version = "1.0.198", features = ["derive"] }
svg = "0.16.0"
xdg = "2.5.2"
zbus = "4.1.2"
